mysite/k8s/db-stateful_set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    network/mysite-my-network: "true"
    service: db
  name: db
spec:
  serviceName: "db"
  replicas: 1
  selector:
    matchLabels:
      service: db
  template:
    metadata:
      labels:
        network/mysite-my-network: "true"
        service: db
    spec:
      containers:
        - image: mysite-db:latest
          name: db
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              hostPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
