mysite/k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: nginx
  name: nginx
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    service: nginx
